  options '--???ESC' and '--???noESC' ineffective for enabling/disabling
  ANSI escape codes for emphasis in the output of --man or --help.
  (Type, e.g., print '--???' for more information about common options.)

- Fixed a rare crash in the 'print' built-in due to the use of uninitialised
  memory while parsing options. Bug introduced in ksh 93u+ 2012-05-31.

2024-02-29:

- Improved the robustness of the routines handling the execution by ksh of a
  script without an initial #! path. More memory is freed up after ksh forks.

- Fixed a crash that could occur after 'typeset +x var' when var was imported
  from the environment and then a discipline function was set for it.

2024-02-22:

- Fixed a crash that occurred when starting ksh with no TERM variable in the
  environment (e.g., in single user mode on NetBSD and DragonFlyBSD).

- Fixed a regression of 'return' within traps, reintroduced on 2023-12-25
  after being fixed on 2020-09-09. The regression caused a 'return' or
  'exit' with no arguments to assume the before-trap exit status instead of
  that of the last-run command. This broke the shipped 'autocd' function.

- Fixed some integer overflows that could occur when using TMOUT.

- Fixed a crash on Solaris and illumos when cancelling a here-document
  with ^C or ^D in an interactive shell.

2024-02-17:

- Fixed a crash that could occur when using 'typeset -T' typed variables
  in a virtual subshell.

2024-02-11:

- Added SHOPT_PRINTF_LEGACY compile-time option for compatibility with
  POSIX-ignorant external printf(1) commands that process a format operand
  starting with '-' without the standard preceding '--' options terminator.
  This is for backward compatibility with local system scripts. The
  behaviour of the system's external printf(1) determines whether this is
  compiled in or out by default. Normal ksh printf options keep working.

- Fixed a bug, introduced on 2023-06-02, that made it impossible within a