@@ -6604,7 +6604,8 @@ If
 .I arg\^
 is given,
 the command specified by
-the arguments is executed in place of this shell
+the arguments is seaerched on PATH as an external command
+and executed in place of the current shell
 without creating a new process.
 The value of the
 .SM
