@@ -956,7 +956,7 @@ int sh_exec(const Shnode_t *t, int flags)
 			}
 			if(com0)
 			{
-				if((!np || !np->nvflag) && !strchr(com0,'/'))
+				if((!np || !np->nvflag) && !sh_isstate(SH_EXEC) && !strchr(com0,'/'))
 				{
 					Dt_t *root = command?sh.bltin_tree:sh.fun_tree;
 					np = nv_bfsearch(com0, root, &nq, &cp);
@@ -1108,7 +1108,7 @@ int sh_exec(const Shnode_t *t, int flags)
 				}
 				if(io)
 					sfsync(sh.outpool);
-				if(!np)
+				if(!np && !sh_isstate(SH_EXEC))
 				{
 					if(*com0 == '/' && !sh_isoption(SH_RESTRICTED))
 					{
