@@ -1670,4 +1670,9 @@ exp='\\ \\\\'
 	"(expected $(printf %q "$exp"), got $(printf %q "$got"))"
 
 # ======
+case $(PATH=/opt/ast/bin:$PATH; exec cat '--???SECTION' 2>&1) in
+1)	err_exit "'exec' runs non-external command" ;;
+esac
+
+# ======
 exit $((Errors<125?Errors:125))
